# Long-Screenshot-Segmentation

./: .gitignore  LICENSE  PYPI_SUBMISSION.md  PYTEST_SETUP.md  README-ZH.md  README.md  README_TESTING.md  RELEASE_NOTES.md  RELEASE_NOTES_V1.1.0.md  pyproject.toml
.github/workflows/: python-publish.yml
Web_page_Screenshot_Segmentation/: __init__.py  blank_spliter.py  color_spliter.py  drawer.py  master.py  spliter.py
Web_page_Screenshot_Segmentation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test/: blank_spliter_test.py  color_spliter_test.py  conftest.py  test_blank_spliter.py  test_color_spliter.py  test_master.py
