[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "long-screenshot-segmentation"
version = "1.1.0"
authors = [
  { name = "Tinnci", email = "t88444281@gmail.com" },
]
description = "Divide long web page screenshots into blocks to input models with shorter contexts. 将长网页截图进行区块分割，用于输入上下文较短的模型"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Office/Business",
    "Intended Audience :: Developers",
]
keywords = ["opencv", "website", "image segmentation", "screenshot", "gpt"]
dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.20",
    "Pillow>=8.0",
]

[project.urls]
"Homepage" = "https://github.com/Tinnci/Long-Screenshot-Segmentation"
"Repository" = "https://github.com/Tinnci/Long-Screenshot-Segmentation"
"Bug Tracker" = "https://github.com/Tinnci/Long-Screenshot-Segmentation/issues"
"Upstream" = "https://github.com/Ryaang/Web-page-Screenshot-Segmentation"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
screenshot-segment = "Web_page_Screenshot_Segmentation.master:main"
screenshot-draw = "Web_page_Screenshot_Segmentation.drawer:main"
screenshot-split = "Web_page_Screenshot_Segmentation.spliter:main"

[tool.setuptools]
packages = ["Web_page_Screenshot_Segmentation"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]